--- a/index.html
+++ b/index.html
@@ -15,49 +15,52 @@
             text-align: center;
             background-color: #121212;
             color: white;
-            padding: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+            flex-direction: column;
+        }
+        #time {
+            font-size: 60px;
+            font-weight: bold;
+            color: #ffcc00;
+            position: absolute;
+            top: 20px;
         }
         .container {
             background: #1e1e1e;
-            padding: 30px;
+            padding: 50px;
             border-radius: 15px;
             box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
-            min-width: 60%;
-            max-width: 80%;
-        }
-        h1 {
-            font-size: 42px;
-            margin-bottom: 20px;
-            text-transform: uppercase;
+            width: 80%;
+            max-width: 90%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .info {
-            font-size: 28px;
-            margin: 15px 0;
+            font-size: 40px;
+            margin: 20px 0;
         }
         .data {
-            font-size: 48px;
+            font-size: 70px;
             font-weight: bold;
             color: #4caf50;
-        }
-        #time {
-            font-size: 36px;
-            font-weight: bold;
-            color: #ffcc00;
         }
     </style>
 </head>
 <body>
 
+    <span id="time">Loading...</span>
+
     <div class="container">
-        <h1>Production Dashboard</h1>
         <p class="info">Production Target: <span class="data" id="target">Loading...</span></p>
         <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">Loading...</span></p>
         <p class="info">Total Vehicle Count: <span class="data" id="totalCount">Loading...</span></p>
-        <p class="info">Current Time: <span id="time">Loading...</span></p>
     </div>
 
     <script>
@@ -88,4 +91,5 @@
 
 </body>
 </html>
+
 
