--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Production Dashboard</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap'); /* Digital font */
+
         * {
             margin: 0;
             padding: 0;
@@ -29,6 +31,7 @@
             color: #ffcc00;
             position: absolute;
             top: 20px;
+            font-family: 'Orbitron', sans-serif;
         }
         .container {
             background: #1e1e1e;
@@ -49,7 +52,10 @@
         .data {
             font-size: 70px;
             font-weight: bold;
-            color: #4caf50;
+            font-family: 'Orbitron', sans-serif;
+            color: #ff0000;
+            text-shadow: 0px 0px 20px rgba(255, 0, 0, 0.8);
+            letter-spacing: 5px;
         }
     </style>
 </head>
@@ -58,9 +64,9 @@
     <span id="time">Loading...</span>
 
     <div class="container">
-        <p class="info">Production Target: <span class="data" id="target">Loading...</span></p>
-        <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">Loading...</span></p>
-        <p class="info">Total Vehicle Count: <span class="data" id="totalCount">Loading...</span></p>
+        <p class="info">Production Target: <span class="data" id="target">0000</span></p>
+        <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">0000</span></p>
+        <p class="info">Total Vehicle Count: <span class="data" id="totalCount">0000</span></p>
     </div>
 
     <script>
