--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
             overflow: hidden;
             flex-direction: column;
         }
+        #date {
+            font-size: 40px;
+            font-weight: bold;
+            color: #00ccff; /* Light blue for date */
+            position: absolute;
+            top: 20px;
+        }
         #time {
             font-size: 60px;
             font-weight: bold;
             color: #ffcc00;
             position: absolute;
-            top: 20px;
-            font-family: 'Orbitron', sans-serif;
+            top: 80px;
         }
         .container {
             background: #1e1e1e;
@@ -53,20 +59,20 @@
             font-size: 70px;
             font-weight: bold;
             font-family: 'Orbitron', sans-serif;
-            color: #ff0000;
-            text-shadow: 0px 0px 20px rgba(255, 0, 0, 0.8);
-            letter-spacing: 5px;
+            color: #ff0000; /* Red for seven-segment display effect */
+            text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff3333; /* Glow effect */
         }
     </style>
 </head>
 <body>
 
+    <span id="date">Loading...</span>
     <span id="time">Loading...</span>
 
     <div class="container">
-        <p class="info">Production Target: <span class="data" id="target">0000</span></p>
-        <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">0000</span></p>
-        <p class="info">Total Vehicle Count: <span class="data" id="totalCount">0000</span></p>
+        <p class="info">Production Target: <span class="data" id="target">Loading...</span></p>
+        <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">Loading...</span></p>
+        <p class="info">Total Vehicle Count: <span class="data" id="totalCount">Loading...</span></p>
     </div>
 
     <script>
@@ -75,6 +81,7 @@
         function updateTime() {
             let now = new Date();
             document.getElementById("time").innerText = now.toLocaleTimeString();
+            document.getElementById("date").innerText = now.toLocaleDateString();
         }
 
         async function fetchSheetData() {
@@ -97,5 +104,3 @@
 
 </body>
 </html>
-
-
