--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
             flex-direction: column;
         }
         #date {
-            font-size: 40px;
+            font-size: 50px;
             font-weight: bold;
             color: #00ccff; /* Light blue for date */
             position: absolute;
-            top: 20px;
+            top: 30px;
+            width: 100%;
+            text-align: center;
         }
         #time {
             font-size: 60px;
             font-weight: bold;
             color: #ffcc00;
             position: absolute;
-            top: 80px;
+            top: 90px;
+            width: 100%;
+            text-align: center;
         }
         .container {
             background: #1e1e1e;
