--- a/index.html
+++ b/index.html
@@ -24,24 +24,34 @@
             width: 100vw;
             overflow: hidden;
             flex-direction: column;
+            position: relative;
+        }
+        #heading {
+            font-size: 80px;
+            font-weight: bold;
+            text-decoration: underline;
+            position: absolute;
+            top: 20px;
+            width: 100%;
+            text-align: center;
         }
         #date {
             font-size: 50px;
             font-weight: bold;
             color: #00ccff; /* Light blue for date */
             position: absolute;
-            top: 30px;
-            width: 100%;
-            text-align: center;
+            top: 140px;
+            left: 50px;
+            text-align: left;
         }
         #time {
             font-size: 60px;
             font-weight: bold;
             color: #ffcc00;
             position: absolute;
-            top: 90px;
-            width: 100%;
-            text-align: center;
+            top: 140px;
+            right: 50px;
+            text-align: right;
         }
         .container {
             background: #1e1e1e;
@@ -54,6 +64,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-top: 180px;
         }
         .info {
             font-size: 40px;
@@ -70,6 +81,7 @@
 </head>
 <body>
 
+    <span id="heading">REVAMP MOTO</span>
     <span id="date">Loading...</span>
     <span id="time">Loading...</span>
 
@@ -84,8 +96,9 @@
 
         function updateTime() {
             let now = new Date();
+            let options = { day: 'numeric', month: 'long', year: 'numeric' }; // Format: 14 February 2025
             document.getElementById("time").innerText = now.toLocaleTimeString();
-            document.getElementById("date").innerText = now.toLocaleDateString();
+            document.getElementById("date").innerText = now.toLocaleDateString(undefined, options);
         }
 
         async function fetchSheetData() {
