--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Production Dashboard</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap'); /* Digital font */
+        @import url('https://fonts.cdnfonts.com/css/eurostile'); /* Import Eurostile font */
 
         * {
             margin: 0;
@@ -13,7 +13,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Eurostile', sans-serif;
             text-align: center;
             background-color: #121212;
             color: white;
@@ -38,16 +38,14 @@
         #date {
             font-size: 50px;
             font-weight: bold;
-            color: #00ccff; /* Light blue for date */
             position: absolute;
             top: 140px;
             left: 50px;
             text-align: left;
         }
         #time {
-            font-size: 60px;
+            font-size: 50px;
             font-weight: bold;
-            color: #ffcc00;
             position: absolute;
             top: 140px;
             right: 50px;
@@ -57,7 +55,6 @@
             background: #1e1e1e;
             padding: 50px;
             border-radius: 15px;
-            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
             width: 80%;
             max-width: 90%;
             display: flex;
@@ -73,9 +70,7 @@
         .data {
             font-size: 70px;
             font-weight: bold;
-            font-family: 'Orbitron', sans-serif;
-            color: #ff0000; /* Red for seven-segment display effect */
-            text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff3333; /* Glow effect */
+            color: red; /* Only red for numbers */
         }
     </style>
 </head>
