--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             position: relative;
         }
         #heading {
-            font-size: 80px;
+            font-size: 100px;
             font-weight: bold;
             text-decoration: underline;
             position: absolute;
@@ -36,24 +36,26 @@
             text-align: center;
         }
         #date {
-            font-size: 50px;
+            font-size: 60px;
             font-weight: bold;
+            color: lightgreen;
             position: absolute;
-            top: 140px;
+            top: 160px;
             left: 50px;
             text-align: left;
         }
         #time {
-            font-size: 50px;
+            font-size: 60px;
             font-weight: bold;
+            color: lightgreen;
             position: absolute;
-            top: 140px;
+            top: 160px;
             right: 50px;
             text-align: right;
         }
         .container {
             background: #1e1e1e;
-            padding: 50px;
+            padding: 60px;
             border-radius: 15px;
             width: 80%;
             max-width: 90%;
@@ -61,16 +63,16 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 180px;
+            margin-top: 200px;
         }
         .info {
-            font-size: 40px;
-            margin: 20px 0;
+            font-size: 50px;
+            margin: 25px 0;
         }
         .data {
-            font-size: 70px;
+            font-size: 80px;
             font-weight: bold;
-            color: red; /* Only red for numbers */
+            color: red; /* Red for numbers */
         }
     </style>
 </head>
