--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: 'Eurostile', sans-serif;
             text-align: center;
-            background-color: #121212;
+            background-color: #1E1E1E;
             color: white;
             display: flex;
             justify-content: center;
@@ -72,7 +72,7 @@
         .data {
             font-size: 80px;
             font-weight: bold;
-            color: red; /* Red for numbers */
+            color: #8B0000; /* Red for numbers */
         }
     </style>
 </head>
