--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <span id="time">Loading...</span>
 
     <div class="container">
-        <p class="info">Production Target: <span class="data" id="target">Loading...</span></p>
-        <p class="info">Today's Vehicle Count: <span class="data" id="todayCount">Loading...</span></p>
-        <p class="info">Total Vehicle Count: <span class="data" id="totalCount">Loading...</span></p>
+        <p class="info">Prod. Target: <span class="data" id="target">Loading...</span></p>
+        <p class="info">Today's Count: <span class="data" id="todayCount">Loading...</span></p>
+        <p class="info">Total Count: <span class="data" id="totalCount">Loading...</span></p>
     </div>
 
     <script>
