--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             padding: 0;
             box-sizing: border-box;
         }
+
+        /* Ensuring the body fills the entire screen */
         body {
             font-family: 'Eurostile', sans-serif;
             text-align: center;
@@ -20,50 +22,60 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            width: 100vw;
-            overflow: hidden;
+            height: 100vh; /* Full height of the viewport */
+            width: 100vw; /* Full width of the viewport */
             flex-direction: column;
-            padding: 5vw;
-            height: 100%; /* Occupy full height of the viewport */
+            padding: 5vw; /* Padding to prevent content from touching edges */
+            overflow: hidden;
         }
+
+        /* Styling the heading */
         #heading {
-            font-size: 10vw; /* Scale to 10% of viewport width */
+            font-size: 10vw; /* Adjust font size based on viewport width */
             font-weight: bold;
             text-decoration: underline;
-            margin-bottom: 4vh; /* Space between heading and date/time */
+            margin-bottom: 5vh; /* Space below heading */
         }
+
+        /* Styling date and time */
         #date, #time {
-            font-size: 5vw; /* Scale to 5% of viewport width */
+            font-size: 4vw; /* Smaller font for date and time */
             font-weight: bold;
             color: lightgreen;
         }
+
+        /* Container for the main content */
         .container {
             background: #1e1e1e;
             padding: 5vh;
             border-radius: 15px;
             width: 100%;
-            max-width: 100%; /* Ensure it takes full width */
+            max-width: 90%; /* Maximum width to keep things centered */
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 5vh;
             box-sizing: border-box;
         }
+
+        /* Styling for info sections (e.g., target, count) */
         .info {
             font-size: 6vw; /* Scalable font size */
-            margin: 2vh 0;
+            margin: 3vh 0; /* Vertical spacing between elements */
         }
+
+        /* Styling for data (target, today count, etc.) */
         .data {
-            font-size: 8vw; /* Scalable font size */
+            font-size: 8vw; /* Scalable font size for data */
             font-weight: bold;
             color: #8B0000; /* Red for numbers */
         }
+
+        /* Button styling */
         .button {
             margin-top: 5vh;
             padding: 3vh 6vw;
-            font-size: 3vw;
+            font-size: 4vw;
             font-weight: bold;
             color: black;
             background-color: lightgreen;
@@ -72,23 +84,40 @@
             cursor: pointer;
             transition: 0.3s;
         }
+
         .button:hover {
             background-color: #76b852;
         }
 
-        /* Optional: Fix for extremely small screens */
-        @media (max-width: 480px) {
+        /* Media queries for smaller screens (like phones) */
+        @media (max-width: 768px) {
             #heading {
-                font-size: 12vw; /* Adjust for smaller screens */
+                font-size: 12vw; /* Larger heading for smaller screens */
             }
             .info {
-                font-size: 8vw;
+                font-size: 8vw; /* Larger info text */
             }
             .data {
-                font-size: 10vw;
+                font-size: 10vw; /* Larger data numbers */
             }
             .button {
-                font-size: 4vw;
+                font-size: 5vw; /* Adjust button text size */
+            }
+        }
+
+        /* Media queries for extremely small screens (like phones in portrait) */
+        @media (max-width: 480px) {
+            #heading {
+                font-size: 14vw; /* Even larger heading for small phones */
+            }
+            .info {
+                font-size: 10vw; /* Larger info text */
+            }
+            .data {
+                font-size: 12vw; /* Larger data numbers */
+            }
+            .button {
+                font-size: 6vw; /* Larger button text */
             }
         }
 
