--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Production Dashboard</title>
     <style>
-        @import url('https://fonts.cdnfonts.com/css/eurostile'); /* Import Eurostile font */
+        @import url('https://fonts.cdnfonts.com/css/eurostile');
 
         * {
             margin: 0;
@@ -29,14 +29,14 @@
         }
 
         #heading {
-            font-size: 10vw; /* Adjusted font size for better scaling */
+            font-size: 10vw;
             font-weight: bold;
             text-decoration: underline;
             margin-bottom: 20px;
         }
 
         #date, #time {
-            font-size: 4vw; /* Reduced size for better scaling */
+            font-size: 4vw;
             font-weight: bold;
             color: lightgreen;
         }
@@ -46,7 +46,7 @@
             padding: 5vh;
             border-radius: 15px;
             width: 100%;
-            max-width: 90%; /* Maximum width to prevent overflow */
+            max-width: 90%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -55,27 +55,34 @@
         }
 
         .info {
-            font-size: 6vw; /* Scalable font size for info */
-            margin: 3vh 0; /* Vertical spacing */
+            font-size: 6vw;
+            margin: 3vh 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .data {
-            font-size: 8vw; /* Scalable data font size */
+            font-size: 8vw;
             font-weight: bold;
             color: #8B0000;
+            margin-left: 2vw;
         }
 
         .button {
-            margin-top: 5vh;
-            padding: 4vh 8vw;
+            margin-left: 2vw;
+            padding: 1.5vw 3vw;
             font-size: 4vw;
             font-weight: bold;
             color: black;
             background-color: lightgreen;
             border: none;
-            border-radius: 15px;
+            border-radius: 10px;
             cursor: pointer;
             transition: 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .button:hover {
@@ -95,6 +102,7 @@
             }
             .button {
                 font-size: 5vw;
+                padding: 2vw 4vw;
             }
         }
 
@@ -111,6 +119,7 @@
             }
             .button {
                 font-size: 6vw;
+                padding: 2.5vw 5vw;
             }
         }
 
@@ -124,9 +133,12 @@
 
     <div class="container">
         <p class="info">Prod. Target: <span class="data" id="target">Loading...</span></p>
-        <p class="info">Today's Count: <span class="data" id="todayCount">Loading...</span></p>
+        <p class="info">
+            Today's Count: 
+            <span class="data" id="todayCount">Loading...</span>
+            <button class="button" onclick="incrementCount()">+</button>
+        </p>
         <p class="info">Total Count: <span class="data" id="totalCount">Loading...</span></p>
-        <button class="button" onclick="incrementCount()">+ Increase Count</button>
     </div>
 
     <script>
@@ -154,15 +166,15 @@
 
         async function incrementCount() {
             try {
-                await fetch(updateURL); // Uses GET request
-                fetchSheetData(); // Refresh data after updating count
+                await fetch(updateURL);
+                fetchSheetData();
             } catch (error) {
                 console.error("Error updating count:", error);
             }
         }
 
-        setInterval(updateTime, 500); // Update time every second
-        setInterval(fetchSheetData, 500); // Fetch new data every 5 seconds
+        setInterval(updateTime, 500);
+        setInterval(fetchSheetData, 500);
         fetchSheetData();
         updateTime();
     </script>
