--- a/index.html
+++ b/index.html
@@ -60,19 +60,18 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            gap: 2vw; /* Space between elements */
         }
 
         .data {
             font-size: 8vw;
             font-weight: bold;
             color: #8B0000;
-            margin-left: 2vw;
         }
 
         .button {
-            margin-left: 2vw;
-            padding: 1.5vw 3vw;
-            font-size: 4vw;
+            padding: 1vw 2vw;
+            font-size: 5vw;
             font-weight: bold;
             color: black;
             background-color: lightgreen;
@@ -80,7 +79,7 @@
             border-radius: 10px;
             cursor: pointer;
             transition: 0.3s;
-            display: flex;
+            display: inline-flex;
             align-items: center;
             justify-content: center;
         }
@@ -101,8 +100,8 @@
                 font-size: 10vw;
             }
             .button {
-                font-size: 5vw;
-                padding: 2vw 4vw;
+                font-size: 6vw;
+                padding: 1.5vw 3vw;
             }
         }
 
@@ -118,8 +117,8 @@
                 font-size: 12vw;
             }
             .button {
-                font-size: 6vw;
-                padding: 2.5vw 5vw;
+                font-size: 7vw;
+                padding: 2vw 4vw;
             }
         }
 
