--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 2vw; /* Space between elements */
+            gap: 2vw;
         }
 
         .data {
             font-size: 8vw;
             font-weight: bold;
-            color: #8B0000;
+            color: white; /* Set text color to white */
+            text-shadow: 2px 2px 5px red; /* Add red outline effect */
         }
 
         .button {
