--- a/index.html
+++ b/index.html
@@ -60,18 +60,20 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 2vw;
+            gap: 3vw; /* Increased space between number and buttons */
         }
 
         .data {
             font-size: 8vw;
             font-weight: bold;
-            color: white; /* Set text color to white */
-            text-shadow: 2px 2px 5px red; /* Add red outline effect */
+            color: #8B0000;
+            border: 2px solid red; /* Added red border */
+            padding: 1vw;
+            border-radius: 10px;
         }
 
         .button {
-            padding: 1vw 2vw;
+            padding: 1vw 3vw; /* Increased padding for more space around the buttons */
             font-size: 5vw;
             font-weight: bold;
             color: black;
