--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         .data {
             font-size: 8vw;
             font-weight: bold;
-            color: #8B0000;
-            border: 2px solid red; /* Added red border */
+            color: white; /* Set number color to white */
+            border: 2px solid red; /* Red outline around the number */
             padding: 1vw;
             border-radius: 10px;
         }
